--- a/localisation/polish/countries_l_polish.yml
+++ b/localisation/polish/countries_l_polish.yml
@@ -112,13 +112,13 @@
  CHS_neutrality_DEF: "Stan Chin"
  CHS_communism: "Stan Chin"
  CHS_communism_DEF: "Stan Chin"
- CHS_fascism_ADJ: "Podbródek"
- CHS_democratic_ADJ: "Podbródek"
- CHS_neutrality_ADJ: "Podbródek"
- CHS_communism_ADJ: "Podbródek"
+ CHS_fascism_ADJ: "Chin"
+ CHS_democratic_ADJ: "Chin"
+ CHS_neutrality_ADJ: "Chin"
+ CHS_communism_ADJ: "Chin"
  CHS_nationalist: "Stan Chin"
  CHS_nationalist_DEF: "Stan Chin"
- CHS_nationalist_ADJ: "Podbródek"
+ CHS_nationalist_ADJ: "Chin"
  QTF_neutrality: "Al Katif"
  QTF_neutrality_DEF: "Al Katif"
  QTF_democratic: "Al Katif"
