Temp fix for BoP's being hidden

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -44,6 +44,7 @@ v1.10.3
   - Fixed the debt button not being able to be clicked when you have "Incoming Financial Collapse"
   - Fixed the double infrastructure for Kanto if you take Automotive Industries and then the Northern Expressways in the Japanese tree
   - Fixed broken NSB focuses and a broken Armenian purchase focus
+  - Fixed an issue with Balance of Powers being hidden under autonomy GUI
 
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
