--- a/localisation/english/MD_focus_EGY_l_english.yml
+++ b/localisation/english/MD_focus_EGY_l_english.yml
@@ -1039,8 +1039,8 @@
  EGY_buy_m777: "Purchasing M109A5"
  EGY_buy_m777_desc: "M109A5 American self-propelled artillery unit, a class of self-propelled howitzers. We need them to strengthen our ground army."
 
- EGY_buy_arms: "§YPurchaising Arms§!"
- EGY_buy_arms_desc: "Our diplomats need to try harder to agree on arms deals."
+ EGY_buy_arms: "§YPurchasing Arms§!"
+ EGY_buy_arms_desc: "Our diplomats need to try harder to agree on arms deals with foreign nations, especially major suppliers."
  EGY_arms_purch_idea: "Diplomatic Efforts"
 
  egypt.129.t: "Egyptian Arms Deal"
