POL tech changes

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -29,6 +29,7 @@ v1.10.3
   - Increased the likelihood of Ag District conversion events
   - Retweaked Chinese PLA Business Ventures idea with new modifiers
   - Internal faction opinion that is over fifty will now tick down towards 50
+  - Added more starting techs for POL in armor category and locked C3ISTAR equipment
 
  Bugfix:
   - Fixed a couple focuses for France where the Stage: focuses were going to the wrong continent
