--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,4 +1,4 @@
-﻿# Millennium Dawn CONTRIBUTOR LIST
+# Millennium Dawn CONTRIBUTOR LIST
 # If you contributed, but are not listed here, contact: Bird
 #
 # This is in no way an exhaustive list of contributors and if you are missing and have proof of your work. Please let Bird know on the MD Discord.
@@ -152,7 +152,7 @@ kaheti_carturi
 Arsdor
 BiometricNuke
 Karl (Discord: @mr.maul) (Gitlab: @KarlEssig)
-
+HKKNNT
 
 Fellow Modders/Teams:
 swf
