--- a/Changelog.txt
+++ b/Changelog.txt
@@ -46,6 +46,15 @@ v1.10.3
   - Fixed the double infrastructure for Kanto if you take Automotive Industries and then the Northern Expressways in the Japanese tree
   - Fixed broken NSB focuses and a broken Armenian purchase focus
   - Fixed an issue with Balance of Powers being hidden under autonomy GUI
+  - Fixed the CHE coring ARM decision
+  - Fixed the unit leader transfer issue in West Indies Federation decision
+  - Fixed an Libya decison trigger issue
+  - Fixed some typo between Cat_/CAT_
+  - Fixed the some swap_idea issues causing duplicate idea
+  - Fixed STATE_TRANSFER_ADD_CORES event, it should work now
+  - comoro_events script cleaning
+  - Changed the population in ledger from k(which actually is 10k) to M, ledger table can display the proper population now
+
 
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
