--- a/localisation/english/MD_traits_l_english.yml
+++ b/localisation/english/MD_traits_l_english.yml
@@ -248,11 +248,11 @@
  Cat_SAM_research: "Surface-to-Air Missiles Research Speed"
  Cat_ABM_research: "Anti-Ballistic Missiles Research Speed"
  Cat_space_research: "All Space Technologies Research Speed"
- Cat_satellite_research: "Satellites Research Speed"
+ CAT_satellite_research: "Satellites Research Speed"
  Cat_GNSS_research: "GNSS Satellites Research Speed"
  Cat_conventional_warhead_research: "Conventional Warheads Research Speed"
- Cat_nuclear_weapons_research: "Nuclear Weapons Research Speed"
- Cat_nuclear_reactors_research: "Nuclear Reactors Research Speed"
+ CAT_nuclear_weapons_research: "Nuclear Weapons Research Speed"
+ CAT_nuclear_reactors_research: "Nuclear Reactors Research Speed"
  CAT_avionics_research: "Air Avionics Research Speed"
  CAT_drones_research: "Air Drones Research Speed"
  CAT_wings_research: "Aircraft Wings Research Speed"
