Australian Onenation content

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -1,4 +1,4 @@
-﻿#By Marmite, Iranian Maggot and Zei33
+﻿#By Marmite, Iranian Maggot, Zei33 and MoreDPS
 l_english:
  australia_focus: "Australia Focus Tree"
 #Decision
@@ -323,6 +323,12 @@ l_english:
  AST_naval_geopolitical_maneuvering_about_the_south_china_sea_desc: "We have successfully asserted our dominance over the previously contested South China Sea with our fleets and are operating there to protect the peace and our trade routes."
  AST_failed_naval_geopolitical_maneuvering_about_the_south_china_sea: "Unsuccessful Naval Geopolitical Maneuvering About the South China Sea"
  AST_failed_naval_geopolitical_maneuvering_about_the_south_china_sea_desc: "We have unsuccessfully attempted to assert our dominance in the South China Sea and China's fleets are now operating there."
+
+
+
+
+
+
 
 
 
@@ -1007,6 +1013,79 @@ l_english:
  AST_Green_PowerSubsidies_desc: "Renewable power subsidies are being utilised for the Snowy Mountains Hydroelectric scheme 2.0, as well as encouraging the use and supplying energy saving light bulbs with LED technology in all citizens housing and government buildings, reducing energy consumption as a whole."
  AST_ImportOil_and_Gas: "Import Oil and Gas"
  AST_ImportOil_and_Gas_desc: "A temporary influx of fuel is required to meet our current demands, However our foreign trading partners are willing to send whatever extra reserves they may have."
+
+
+
+
+## ░▒▓██████▓▒░░▒▓███████▓▒░░▒▓████████▓▒░      ░▒▓███████▓▒░ ░▒▓██████▓▒░▒▓████████▓▒░▒▓█▓▒░░▒▓██████▓▒░░▒▓███████▓▒░  
+##░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░             ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ 
+##░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░             ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ 
+##░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓██████▓▒░        ░▒▓█▓▒░░▒▓█▓▒░▒▓████████▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ 
+##░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░             ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ 
+##░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░             ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ 
+## ░▒▓██████▓▒░░▒▓█▓▒░░▒▓█▓▒░▒▓████████▓▒░      ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░░▒▓██████▓▒░░▒▓█▓▒░░▒▓█▓▒░ 
+
+#Political- One Nation
+ AST_One_Nation: "One Nation Party"
+ AST_One_Nation_desc: "Pauline Hansons One Nation Party represents a balanced right-wing alternative to the current duopoly of Labor and the Coalition. Her message resonated with more than a million Australians who flocked to Federal polls to stand with Pauline for Australian values. One Nation achieved a vote of 9% in the Federal election and 22% in the 1998 Queensland elections. "
+ AST_Citizen_Initiated_Referenda: "Citizen Initiated Referenda"
+ AST_Citizen_Initiated_Referenda_desc: "Citizen Initiated Referenda rights will enable Australian citizens to put forward legislation or a referendum question without waiting for politicians to listen and act."
+ AST_Turn_Back_the_Illegal_Boats: "Turn Back the Illegal Boats"
+ AST_Turn_Back_the_Illegal_Boats_desc: "Illegal Immigration has been running rampant with a steady increase of boat arrivals. Asylum seekers should claim asylum in the first safe country they reach, seekers that are not from a neighbouring country clearly are economic oppotunistic migrants who are willing to flout our laws to gain entry to our Nation."
+ AST_Clean_up_the_Biased_Australian_Broadcasting_Corporation: "Clean up the Biased ABC"
+ AST_Clean_up_the_Biased_Australian_Broadcasting_Corporation_desc: "The National Broadcaster has become a disgrace, Showing a clear left-leaning bias their lack of honesty and ommission of facts has the public wary of any untrustworthy reports they produce, We will review their funding and legislate the National Brodcaster to be fair and honest to gain the publics trust again"
+ AST_Defund_the_corrupt_SBS: "Defund the Corrupt SBS"
+ AST_Defund_the_corrupt_SBS_desc: "The SBS which commonly is reffered to as the socialist broadcasting service, for their complete lack of impartiality due to acts such as outright endorsing political campaigns of the extreme left and engaging in public smear camapigns which includes creating division & fear mongering social issues. The SBS will become defunct immediately."
+ AST_Citizen_Initiated_Referenda_tt: "This will unlock the Citizen Initiated Referenda decisions category, allowing you to implement changes suggested by your citizens."
+ AST_Turn_Back_the_Illegal_Boats_tt: "After 360 days, the idea will upgrade to represent its completed impact. "                                                                                                                     
+ AST_Turn_back_illegal_boats_idea: "Turn back the Illegal boats"
+ AST_Turn_back_illegal_boats2_idea: "Succesfully Turned back the Illegal boats"
+ AST_Education_Reform: "Australian Education Reform"
+ AST_Education_Reform_desc: "Australian education facilities are infested with dangerous left-wing ideologues which are adversely affecting the minds of our youth, we shall fire any educators who promote dangerous communist or socialist agendas, including banning Critical Race theory and Gender Ideology being taught, we will mandate displaying the flag in every classroom."
+ AST_Naru_Island_Offshore_Processing: "Naru Island Offshore Processing Facility"
+ AST_Naru_Island_Offshore_Processing_desc: "The Naru Island Offshore Processing Facility will prevent illegal aliens, whom have shown their disregard for our laws by illegally entering our waters from ever reaching Australian shores. As a deterrent the illegal aliens will be proccessed in Naru Island by the local government. Whilst funding the restoration of Nauru's phosphate mining."
+ AST_An_Economically_Responsible_Immigration_Policy: "An Economically Responsible Immigration Policy"
+ AST_An_Economically_Responsible_Immigration_Policy_desc: "One of the factors driving massive inflation in our country is the irresponsible and unsustainable migration policy we currently have. With a looming housing shortage crisis the prices of houses for Australians needs to be stabilised. A massive reduction in migration is proposed for the health of our Nation."
+ AST_Seperation_of_Church_and_State: "Seperation of Church and State"
+ AST_Seperation_of_Church_and_State_desc: "For too long Churches have enjoyed tax free status and special priviliges afforded to them in our laws despite their dubious past history, we shall end this mistake today, by backdating taxation charges to the inception of any religious affiliated entity including the immediate seizure of government owned lands in use by these organisations."
+ AST_Merit_Based_Employment_Laws: "Merit Based Employment Laws"
+ AST_Merit_Based_Employment_Laws_desc: "We will enact our new Merit Based Employment laws which promote employers ability to hire, reward and fire employees based on performance. This will include outlawing the failed diversity equity and inclusion programmes and abused anti-discrimination procedures to ensure employers get and keep the most productive employees."
+ AST_Fund_Sky_News: "Fund Sky News"
+ AST_Fund_Sky_News_desc: "Sky News Australia is an Australian conservative news channel. Originally launched on 19 February 1996 it broadcasts on pay television in Australia and New Zealand, Comparisons have been made to Rupert Murdoch's American news channel Fox News, we will buy a majority shareholder stake in Sky News and fund it as a National Broadcaster."
+ AST_Fund_Sky_News_idea: "Fund Sky News"
+ AST_Education_Reform_idea: "Australian Education Reform"
+ AST_An_Economically_Responsible_Immigration_Policy_idea: "An Economically Responsible Immigration Policy"
+ AST_Seperation_of_Church_and_State_idea: "Seperation of Church and State"
+ AST_Merit_Based_Employment_Laws_idea: "Merit Based Employment Laws"
+ AST_Freedom_of_Speech_Rights_Bill: "Freedom of Speech Rights Bill"
+ AST_Freedom_of_Speech_Rights_Bill_desc: "The Freedom of Speech Rights Bill will ensure fair and open criticism in the press and including public opinion, the freedom of speech will declare unilaterally that open discussions are more important than any perceived offense and includes protections against censorship for those who advocate their rights."
+ AST_From_a_Commonwealth_to_a_Republic_idea: "From a Commonwealth to a Republic"
+ AST_From_a_Commonwealth_to_a_Republic: "From a Commonwealth to a Republic"
+ AST_From_a_Commonwealth_to_a_Republic_desc: "The colony of New South Wales was established with the arrival of the First Fleet of 11 vessels under the command of Captain Arthur Phillip in January 1788, and after a referendum The Commonwealth of Australia was proclaimed by the Governor-General, Lord Hopetoun on 1 January 1901, today we surpass our origins and become a republic."
+ cancelled_our_port_lease_mod: "Cancelled our Port Lease"
+ chinese_security_risk_mod: "Landbridge Chinese Security Risk"
+ continue_our_port_lease_mod: "Continued Landbridge Port Lease"
+ chinese_port_operations_mod: "Chinese Lease at Landbridge Port"
+ AST_99_Year_Chinese_Lease_of_Landbridge_Port: "99 Year Chinese Lease of Landbridge Port"
+ AST_99_Year_Chinese_Lease_of_Landbridge_Port_desc: "The 99 year lease of the Landbridge Port by previous governments to China requires urgent review, in the wake of growing Chinese threat of expansionism in the South East Asia Pacific region. We will re-evaluate our balance between our security and our trading commitments to China."
+ AST_Invest_in_Australia: "Invest in Australia"
+ AST_Invest_in_Australia_desc: "To stimulate growth in our economy we will invest into the Eastern Coast of Australia, leading the contruction projects of three new civilian factories to kickstart our construction industry."
+ AST_End_Foreign_Ownership: "End Foreign Ownership"
+ AST_End_Foreign_Ownership_desc: "For too long now foreigners have been able to own land and businesses inside Australia whilst siphoning the money created by those businesses out of our country, at the same time driving up inflation and pressure in a tight housing market, today marks the beggining of the correction of these injustices."
+ AST_End_Foreign_Ownership_idea: "End Foreign Ownership"
+ AST_Mandatory_Citizenship_Pathway_for_Landowners: "Mandatory Citizenship Pathway for Landowners"
+ AST_Mandatory_Citizenship_Pathway_for_Landowners_desc: "We will mandate any exisiting foreign Landowners may keep their land if they pay to become an Australian citizen and pass our citizenship test with a required residency period of 2 years minimum to be eligible."
+ AST_Pauline_Hansons_Please_Explain_Satire_Cartoon: "Pauline Hansons Please Explain Satire Cartoon"
+ AST_Pauline_Hansons_Please_Explain_Satire_Cartoon_desc: "A entertaining and clever way to inform the public of our policies and the shortcomings of our political adversaries is a political satire cartoon based on recent events, since political satire is lawfully protected in Australia we are free to make fun of any public figure."
+ AST_Pauline_Hansons_Please_Explain_Satire_Cartoon_idea: "Pauline Hansons Please Explain Satire Cartoon"
+ President_of_Australia: "President of Australia"
+ AST_Seize_Foreign_Owned_Assets: "Seize Foreign Owned Assets"
+ AST_Seize_Foreign_Owned_Assets_desc: "We will seize any remaining foreign owned assets to the state, this may cause a small amount of unrest in investor groups and in our citizens"
+ 
+
+
+
+
 
 
 #military
