--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -2743,17 +2743,17 @@
  amphibious_warfare_experts: "Amphibious Warfare Experts"
  amphibious_warfare_experts_desc: "By continuously training on landing techniques and river crossings, our marine forces will become the leading experts in amphibious military operations."
  thunder_runs: "Thunder Runs"
- thunder_runs_desc: "With the goal to sow chaos and inflict damange the enemy, our armored forces will be trained to conduct rapid strikes deep into enemy territory, even without follow on forces right behind them."
+ thunder_runs_desc: "With the goal to sow chaos and inflict damage the enemy, our armor forces will be trained to conduct rapid strikes deep into enemy territory, even without follow on forces right behind them."
  shore_directed_fires: "Shore Directed Fires"
- shore_directed_fires_desc: "Utilizing highly trained observers, marines on the beach will be able to precicely direct where naval fire support is utilized."
+ shore_directed_fires_desc: "Utilizing highly trained observers, marines on the beach will be able to precisely direct where naval fire support is utilized."
  dedicated_breaching_parties: "Dedicated Breaching Parties"
  dedicated_breaching_parties_desc: "With training in destroying enemy fortifications, these forces will be trained to breach enemy obstacles with ease during combat operations."
  logistical_experts: "Logistical Experts"
- logistical_experts_desc: "With the amount of personel and equipment we need to move, our forces support and supply companies will become experts in moving men and material to the point of contact with minimal delay."
+ logistical_experts_desc: "With the amount of personnel and equipment we need to move, our forces support and supply companies will become experts in moving men and material to the point of contact with minimal delay."
  rapid_mission_planning: "Rapid Mission Planning"
  rapid_mission_planning_desc: "In order to quickly exploit opening and opportunities, our forces will practice rapidly planning and executing combat missions as needed."
  infantry_amphibious_strike_forces: "Infantry Amphibious Strike Forces"
- infantry_amphibious_strike_forces_desc: "Relying primarily on highly trained light infantry forces, our marines will become experts in striking and destroying key enemy targets during ampibious operations."
+ infantry_amphibious_strike_forces_desc: "Relying primarily on highly trained light infantry forces, our marines will become experts in striking and destroying key enemy targets during amphibious operations."
  the_few_the_proud: "The Few, The Proud"
  the_few_the_proud_desc: "Our marine infantry will be an elite fighting force, few in number, but highly skilled and capable as a landing force."
  one_if_by_land: "One If By Land"
@@ -2841,7 +2841,7 @@
  dispersed_jtac_teams: "Dispersed JTAC Teams"
  dispersed_jtac_teams_desc: "By dispersing our JTAC teams among line units, we will be able to assist those units with fires when those units need it most, rather than relying on a request from the command level."
  forward_staged_supply_lines: "Forward Staged Supply Lines"
- forward_staged_supply_lines_desc: "By stanging supplies and replacements forward towards the front, we can minimize the turn around time on supply and reinforcement requests, speeding of the mobility of our forces."
+ forward_staged_supply_lines_desc: "By standardization supplies and replacements forward towards the front, we can minimize the turn around time on supply and reinforcement requests, speeding of the mobility of our forces."
  helicopter_gunship_interdiction: "Helicopter Gunship Interdiction"
  helicopter_gunship_interdiction_desc: "Utilizing our attack helicopters, we can quickly strike back at enemy forces who attempt to maneuver past or near us."
  prioritized_gunship_crews: "Prioritized Gunship Crews"
