--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -2889,7 +2889,7 @@
  critical_care_medevac: "Critical Care MEDEVAC"
  critical_care_medevac_desc: "In order to ensure that our wounded survive, all of our airmobile MEDEVAC personel will be critical care paramedics and nurses, to best increase the odds of our personel surviving to fight another day."
  airmobile_leadership_courses: "Airmobile Leadership Courses"
- airmobile_leadership_courses_desc: "To better teach our leadership how to operate in this enviornment, specalized airmobile leadership courses will be established to teach the ins and outs of these operations."
+ airmobile_leadership_courses_desc: "To better teach our leadership how to operate in this environment, specialized airmobile leadership courses will be established to teach the ins and outs of these operations."
  combat_resupply_flights: "Combat Resupply Flights"
  combat_resupply_flights_desc: "Regardless of the risks, our airmobile logistics pilots will be able to conduct flights into the combat zone to keep our soldiers supplied with ammunition and equipment."
  expanded_light_fighter_bypass_operations: "Expanded Light Fighter Bypass Operations"
@@ -2897,11 +2897,11 @@
  bad_weather_flight_training: "Bad Weather Flight Training"
  bad_weather_flight_training_desc: "Training to fly in all weather conditions will mean that our pilots will be able to transport troops and supplies, no matter what weather they find themselves in."
  cls_by_doctrine: "CLS By Doctrine"
- cls_by_doctrine_desc: "By ensuring that every single soldier we have in our force is trained in CLS, will we be able to provide emergency medical care to any wounded soldier immediately, reducing overal casulties."
+ cls_by_doctrine_desc: "By ensuring that every single soldier we have in our force is trained in CLS, will we be able to provide emergency medical care to any wounded soldier immediately, reducing overall casualties."
  night_combat_insertions: "Night Combat Insertions"
  night_combat_insertions_desc: "By taking advantage of the night, we can conduct rapid operations when the enemy has the least amount of visibility."
  rapid_battery_emplacement: "Rapid Battery Emplacement"
- rapid_battery_emplacement_desc: "With artillery crews trained to rapidly emplace their guns, we will be able to rapidly establish firebases to allow proper fire support for our other units."
+ rapid_battery_emplacement_desc: "With artillery crews trained to rapidly emplaced their guns, we will be able to rapidly establish firebases to allow proper fire support for our other units."
  dedicated_spotter_teams: "Dedicated Spotter Teams"
  dedicated_spotter_teams_desc: "Teams of artillery and air spotters will be embedded into all of our battalions, with the sole purpose to finding and direct fire onto high-value enemy targets."
  maintaining_momentum: "Maintaining Momentum"
