Adding Solomon Competition/Operation RAMSI events.

--- a/localisation/english/MD_opinion_modifiers_l_english.yml
+++ b/localisation/english/MD_opinion_modifiers_l_english.yml
@@ -507,3 +507,4 @@
  afghanistan_trade: "Afghanistan Trade"
  AST_bali_trauma: "Bali Shared Trauma"
  AST_caused_mh17_crash: "Caused MH17 Crash"
+ SOL_ramsi_support: "RAMSI Supporter"
