australia one nation update

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -1,4 +1,4 @@
-﻿#By Marmite, Iranian Maggot, Zei33 and MoreDPS
+﻿#By Marmite, Iranian Maggot and Zei33
 l_english:
  australia_focus: "Australia Focus Tree"
 #Decision
@@ -105,6 +105,20 @@ l_english:
  australia_md.29.d2: "Flames are breaking out across the country. Our preparations have meant that there's been no serious damage and people have been evacuated safely from the affected areas."
  australia_md.29.o1: "This is a terrible!"
  australia_md.29.o2: "This is great news!"
+
+ australia_md.50.t: "Cancel the 99-year Landbridge port Lease"
+ australia_md.50.d: "With pressing security concerns coming from Chinese expansionism in the South East Asia pacific we must review a decision by previous government to lease the port of Landbridge to China for 99 years as a potential security risk or we could appease our trading partner."
+ australia_md.50.o1: "Cancel the Lease"
+ australia_md.50.o2: "Continue the Lease"
+
+ australia_md.150.t: "Australia Cancels the 99-year Port Lease"
+ australia_md.150.d: "Australia has cancelled our 99-year Lease of the Landbridge port used for mining operations, citing security issues at the port and the lengthy nature of the 99 year lease, our diplomats will vehemently oppose this action taken by Australia."
+ australia_md.150.a: "Australia may come to regret this"
+
+ australia_md.151.t: "Australia Continues the 99-year Port Lease"
+ australia_md.151.d: "Australia has continued our 99-year Lease of the Landbridge port used for mining operations, citing a change in direction as positive relations grow between our nations, our diplomats welcome this action taken by Australia."
+ australia_md.151.a: "Australia is an important trading partner"
+
 
 #Tooltips
  CHI_influece_greater_influ_20_tt: "Our influence on Australia is greater than 20 (Current: [?THIS.AST_CHI_trade_influence])"
@@ -965,11 +979,11 @@ l_english:
  AST_The_Minerals_Council_of_Australia: "The Minerals Council of Australia"
  AST_The_Minerals_Council_of_Australia_desc: "Minerals Council of Australia is the leading advocate for Australia's minerals industry, promoting and enhancing sustainability, profitability and competitiveness. Australia being the world’s leading producer of bauxite, alumina, rutile and tantalum , funding will be provided for the minerals council to boost our foreign exports."
  AST_Mining_industryprivatisation: "Mining Industry Privatisation"
- AST_Mining_industryprivatisation_desc: "A privatisation of the government owned mining assests may increase operational output as well as reduce the economical burden of maintaining and running these mines, however the reduction of our government employees prescense may adversly affect voters intentions in these areas. "
+ AST_Mining_industryprivatisation_desc: "A privatisation of the government owned mining assets may increase operational output as well as reduce the economical burden of maintaining and running these mines, however the reduction of our government employees prescense may adversly affect voters intentions in these areas. "
  AST_Foreign_MiningInvestment: "Foreign Mining Investment"
  AST_Foreign_MiningInvestment_desc: ""
  AST_FurtherPrivatise_Public_Sector_Mining: "Further Privatise Public Sector Mining"
- AST_FurtherPrivatise_Public_Sector_Mining_desc: "Privatisation of our remaining mining assests will further increase operational output but will come at the direct cost of lost income and a general dissatisfaction in the public with this policy."
+ AST_FurtherPrivatise_Public_Sector_Mining_desc: "Privatisation of our remaining mining assets will further increase operational output but will come at the direct cost of lost income and a general dissatisfaction in the public with this policy."
  AST_Trust_In_Hawke-Keating_Reform: "Trust In Hawke-Keating Reform"
  AST_Trust_In_Hawke-Keating_Reform_desc: "The Hawke-Keating government floated the Australian dollar, repealed rules that prohibited foreign-owned banks to operate in Australia, dismantled the lucrative tariff system and sold off part of the state owned Commonwealth Bank. These questionable policies have prompted the government to abandon their ill-fated policy."
  AST_East: "Eastern Oriented Mining"
@@ -1070,9 +1084,14 @@ l_english:
  AST_99_Year_Chinese_Lease_of_Landbridge_Port_desc: "The 99 year lease of the Landbridge Port by previous governments to China requires urgent review, in the wake of growing Chinese threat of expansionism in the South East Asia Pacific region. We will re-evaluate our balance between our security and our trading commitments to China."
  AST_Invest_in_Australia: "Invest in Australia"
  AST_Invest_in_Australia_desc: "To stimulate growth in our economy we will invest into the Eastern Coast of Australia, leading the contruction projects of three new civilian factories to kickstart our construction industry."
+ AST_Invest_in_Australia_idea: "Invest in Australia"
+ AST_Invested_in_Australia_idea: "Invested in Australia"
+ AST_Heavily_Invested_in_Australia_idea: "Heavily Invested in Australia"
+ AST_Fully_Invested_in_Australia_idea: "Fully Invested in Australia"
  AST_End_Foreign_Ownership: "End Foreign Ownership"
  AST_End_Foreign_Ownership_desc: "For too long now foreigners have been able to own land and businesses inside Australia whilst siphoning the money created by those businesses out of our country, at the same time driving up inflation and pressure in a tight housing market, today marks the beggining of the correction of these injustices."
  AST_End_Foreign_Ownership_idea: "End Foreign Ownership"
+ AST_End_Foreign_Ownership2_idea: "Ended Foreign Ownership & Seized Assets"
  AST_Mandatory_Citizenship_Pathway_for_Landowners: "Mandatory Citizenship Pathway for Landowners"
  AST_Mandatory_Citizenship_Pathway_for_Landowners_desc: "We will mandate any exisiting foreign Landowners may keep their land if they pay to become an Australian citizen and pass our citizenship test with a required residency period of 2 years minimum to be eligible."
  AST_Pauline_Hansons_Please_Explain_Satire_Cartoon: "Pauline Hansons Please Explain Satire Cartoon"
@@ -1081,9 +1100,39 @@ l_english:
  President_of_Australia: "President of Australia"
  AST_Seize_Foreign_Owned_Assets: "Seize Foreign Owned Assets"
  AST_Seize_Foreign_Owned_Assets_desc: "We will seize any remaining foreign owned assets to the state, this may cause a small amount of unrest in investor groups and in our citizens"
- 
-
-
+ AST_One_Nation_Apprenticeship_Scheme: "One Nation Apprenticeship Scheme"
+ AST_One_Nation_Apprenticeship_Scheme_desc: "One Nation supports jobs for Australians first and foremost. In an effort to bolster our homegrown tradesmen and women, One Nation will increase its national apprenticeship scheme whereby three year apprentices receive a wage subsidy and will create jobs in our joint agriculture and domestic arms production."
+ AST_Government_Funded_Housing_Estates: "Government Funded Housing Estates"
+ AST_Government_Funded_Housing_Estates_desc: "New Housing Developments on government lands will be established and cleared to address the housing shortage crisis as well as utilising the new apprentices from our apprenticeship scheme to help build their trade skills. As well as providing Australians with a  complaint to modern safety standards home."
+ AST_First_Time_Home_Owners_Grant: "First Time Home Owners Grant"
+ AST_First_Time_Home_Owners_Grant_desc: "The First Time Home Owners Grant will help young and struggling Australians be able to afford a piece of the Australian dream, by offering a one time lump sum grant and offering reduced home rates in our Government funded estates , it will lower the entry bar for our citizens to become homeowners."
+ AST_National_High_Speed_Rail_Network: "National High Speed Rail Network"
+ AST_National_High_Speed_Rail_Network_desc: "The development as separate colonies in the 19th century resulted in three mainline gauges, A single  National High Speed Rail network is required to update our hereditary gauge changing network to provide fast and efficent transportation of goods from rural areas and passengers transitting between metropolitan centres."
+ AST_National_High_Speed_Rail_Network_idea: "National High Speed Rail Network"
+ AST_The_Future_of_our_Nation: "The Future of our Nation"
+ AST_The_Future_of_our_Nation_desc: "The Successful policies enacted by [AST.GetLeader] such as Kickstartings Australias consturction industry and the One Nation Apprenticeship Scheme and providing Australians with affordable housing have culminated in strengthening of our overall production efficency and GDP."
+ AST_The_Future_of_our_Nation_idea: "The Future of our Nation"
+ AST_Import_Tariffs: "Import Tariffs"
+ AST_Import_Tariffs_desc: "To prevent our local markets being flooded with cheap low quality manufactured products we will impose Import Tariffs on those goods to ensure our local markets remain competitive, additionally our trade surplus raises the value of our exported raw commodites to our respective trade partners."
+ AST_Import_Tariffs_idea: "Import Tariffs"
+ AST_End_Royalty_Free_Gas_Exports: "End Royalty Free Gas Exports"
+ AST_End_Royalty_Free_Gas_Exports_desc: "Australia currently exports more than 90% of its extracted gas reserves royalty free, This neglectful decision has cost Australia billions in lost revenue"
+ AST_End_Royalty_Free_Gas_Exports_idea: "End Royalty Free Gas Exports"
+ AST_Triumph_in_our_work: "Triumph in our work"
+ AST_Triumph_in_our_work_desc: "Our Industries must expand after the successful implementation of our fiscal policies, we will prioritise developement and specialistasion of faster consturction methods and remove unnecessary red-tape for their approval."
+ AST_Triumph_in_our_work_idea: "Triumph in our work"
+ AST_Deregulate_the_Manufacturing_Sector: "Deregulate the Manufacturing Sector"
+ AST_Deregulate_the_Manufacturing_Sector_desc: "A Proposal to deregulate the manufacturing industry, will increase our manufacturing potiential. Now unregistered companies will be able to immediately gain government contracts, this proposal includes a reduction in complaince and safety requirements."
+ AST_Made_In_Australia: "Made In Australia"
+ AST_Made_In_Australia_desc: "The Australian Made logo proudly is featured on proudcts made in Australia by Australian goods, a public patriotism campaign and overseas advertising extolling the virtues of products, the expected increase in demand will result in increased productivity in our manufacturing and raw resources sectors."
+ AST_Made_In_Australia_idea: "Made In Australia"
+ withdraw_from_paris_accord_mod: "Withdraw from Paris Climate Accord"
+ AST_Withdrawal_From_United_Nations_Paris_Accord: "Withdrawal From the United Nations Paris Accord"
+ AST_Withdrawal_From_United_Nations_Paris_Accord_desc: "The Paris accord is an international treaty on climate change, The treatys overreaching policy covers climate change mitigation, adaptation, and finance. We must not allow dangerous globalist policies that are harmful to our Nation be dictated to us, We will publicly state our intention not to follow this accord."
+ AST_Withdrawal_From_United_Nations_Paris_Accord_idea: "Withdraw from Paris Climate Accord"
+ AST_End_the_Global_Warming_Hoax: "End the Global Warming Hoax"
+ AST_End_the_Global_Warming_Hoax_desc: "If climate alarmist predictions since the 70's were right about the sea level rising we would all be metres underwater by now,The Paris accord has been proved redundant when much larger developing countries in Asia are producing more than 20 times more pollution than we do, it is now time to publicly campaign against such a restrictive treaty and prove the success of our campaign with action to match."
+ AST_End_the_Global_Warming_Hoax_idea: "End the Global Warming Hoax"
 
 
 
