--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -994,6 +994,8 @@
  hongkong_news.3.d: "Protests against Chinese actions in the territory of Hong Kong have rapidly increased, with analysts widely agreeing that the protests have entered a new stage in terms of scale and tactics. How the Chinese and Hong Kong governments will respond to this new escalation remains to be seen, but officials in both governments are reportedly increasingly resentful of the impacts of the protests on their vested interests. The protesters, for their part, are refusing to stand down until the Chinese and Hong Kong governments address their demands."
  hongkong_news.3.a: "The Hong Kong people will not stay quiet..."
  hongkong_news.3.b: "They will stay home if they know what's good for them!"
+ ##AUSTRALIA
+ 
 
  #Korea
  korea.1.t: "China Demands Our Withdrawal from the Korean Peninsula"
