--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -14,7 +14,7 @@
  GER_Expand_Volkswagen_Nutzfahrzeuge_desc: " As a German marque of light commercial vehicles, owned by Volkswagen Group; It is headquartered in Hannover, Lower Saxony, Germany. Originally part of Volkswagen Passenger Cars (business area), it has operated as a separate marque since 1995."
  GER_BMW_Focus: "Bayerische Motoren Werke AG"
  GER_BMW_Focus_desc: "German multinational manufacturer of luxury vehicles and motorcycles headquartered in Munich, Bavaria, Germany. The company was founded in 1916 as a manufacturer of aircraft engines, which it produced from 1917 to 1918 and again from 1933 to 1945"
- GER_BMW_CKD_System: "CKD Stystem"
+ GER_BMW_CKD_System: "CKD System"
  GER_BMW_CKD_System_desc: "By complete knock-down our Cars, we can transport our cars around the world by need a lot less transport capacity"
  GER_Restructure_Infrastructure: "Infrastructure Reforms"
  GER_Restructure_Infrastructure_desc: "The divide in German infrastructure from the rest of the world is still quite apparent, we must improve it greatly if we are to compete in the best European countries list."
