--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -1257,7 +1257,7 @@
  iraq_md.50.a: "Send in the Riot Police, Deadly Force is Not Authorized"
  iraq_md.50.b: "Send in the Riot Police, Deadly Force is Authorized"
 
- iraq_md.51.t: "Rioters Stage Plans insde of Mosques in Najaf and Karbala"
+ iraq_md.51.t: "Rioters Stage Plans inside of Mosques in Najaf and Karbala"
  iraq_md.51.d: "Shi'ite militants and groups have been using mosques within Najaf and Karbala to stage plans for their riots. This has been done largely without our knowledge this whole time.."
  iraq_md.51.a: "Block Transport to the Mosques"
  iraq_md.51.b: "Close and Garrison the Mosques"
