--- a/localisation/english/MD_focus_SOO_l_english.yml
+++ b/localisation/english/MD_focus_SOO_l_english.yml
@@ -48,15 +48,15 @@
  SOO_againt_georgia_idea: "Strategy of The War With Georgia"
 
  SOO_Roki_tunnel_toll: "Tolls From The Roki Tunnel"
- SOO_Roki_tunnel_toll_desc: "Additional income = 0.010"
+ SOO_Roki_tunnel_toll_desc: "Additional Income: $§G0.010§!"
  SOO_defence_doctrine: "Defensive Doctrine"
  SOO_invervention_rus: "The Russian Doctrine of Military Intervention"
  SOO_help_ossetia_SOV: "Investments in the §Y[SOO.GetNameWithFlag]§!"
- SOO_help_ossetia_SOV_desc: "We will financially support the Budget of South Ossetia, since this state itself is not able to do this. Additional income = §R-0.120§!"
+ SOO_help_ossetia_SOV_desc: "We will financially support the Budget of South Ossetia, since this state itself is not able to do this. Additional Income: $§r-0.120§!"
  SOO_help_ossetia: "Investments from the §Y[SOV.GetNameWithFlag]§!"
- SOO_help_ossetia_desc: "Russia provides us financially, and this allows our economy to stay afloat. Additional income = §G0.120§!"
+ SOO_help_ossetia_desc: "Russia provides us financially, and this allows our economy to stay afloat. Additional Income: $§G0.120§!"
  SOO_develop_turism: "Tourism Development"
- SOO_develop_turism_desc: "We will develop domestic tourism, which should bring additional income to our treasury. Additional income = §G0.100§!"
+ SOO_develop_turism_desc: "We will develop domestic tourism, which should bring additional income to our treasury. Additional Income: $§G0.100§!"
  #State Modifers
  SOO_Mamison_path: "Mamison Pass"
  SOO_Mamison_path_desc: ""
