--- a/localisation/english/MD_focus_SOO_l_english.yml
+++ b/localisation/english/MD_focus_SOO_l_english.yml
@@ -52,7 +52,7 @@
  SOO_defence_doctrine: "Defensive Doctrine"
  SOO_invervention_rus: "The Russian Doctrine of Military Intervention"
  SOO_help_ossetia_SOV: "Investments in the §Y[SOO.GetNameWithFlag]§!"
- SOO_help_ossetia_SOV_desc: "We will financially support the Budget of South Ossetia, since this state itself is not able to do this. Additional Income: $§r-0.120§!"
+ SOO_help_ossetia_SOV_desc: "We will financially support the Budget of South Ossetia, since this state itself is not able to do this. Additional Income: $§R-0.120§!"
  SOO_help_ossetia: "Investments from the §Y[SOV.GetNameWithFlag]§!"
  SOO_help_ossetia_desc: "Russia provides us financially, and this allows our economy to stay afloat. Additional Income: $§G0.120§!"
  SOO_develop_turism: "Tourism Development"
